--- a/src/css/components/content.css
+++ b/src/css/components/content.css
@@ -55,3 +55,29 @@
     top: 18px;
     right: 6px;
 }
+.content-wrapper__action--muiltiple {
+    padding-top: 8px;
+}
+.content-wrapper-btn--muiltiple{
+    position: relative;
+    height: 26px;
+    width: 180px;
+    padding-right: 32px;
+    border-radius: 20px;
+}
+.content-wrapper-btn-icon {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+.content-wrapper-btn--action {
+    position: absolute;
+    top: 107%;
+    z-index: 900;
+    justify-content: left;
+    right: 8px;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    width: 86px;
+    height: 30px;
+}
