--- a/src/css/components/textfiled.css
+++ b/src/css/components/textfiled.css
@@ -132,7 +132,7 @@
     bottom: 40px;
 }
 .textfield-list.show-list {
-    height: 160px;
+    height: auto;
     overflow-y: auto;
     padding: 2px 0;
     border: 1px solid #babec5;
@@ -169,6 +169,16 @@
     max-width: max-content;
     position: relative;
     top: -4px;
+}
+.w-149{
+    min-width: 149px; 
+    width: 149px ;
+}
+.mr-0 {
+    margin-right: 0;
+}
+.mr-6 {
+    margin-right: 6px
 }
 
 .textfield__label input[type="checkbox"] {
