--- a/src/css/components/dialog.css
+++ b/src/css/components/dialog.css
@@ -55,7 +55,7 @@
   font-size: 14px;
 }
 .dialog-warring-footer {
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .dialog-content__header-dl {
   padding-bottom: 38px;
@@ -65,5 +65,5 @@
   display: flex;
 }
 .space-beetween {
-  justify-content: space-between;
+  justify-content: flex-end;
 }
