--- a/src/css/components/sidebar.css
+++ b/src/css/components/sidebar.css
@@ -16,6 +16,8 @@
     padding: 0 14px 0 8px;
     border-left: 6px solid transparent;
     position: relative;
+    text-decoration: none;
+    color: white;
 }
 
 .sidebar-item:first-child {
