--- a/src/css/components/tooltip.css
+++ b/src/css/components/tooltip.css
@@ -1,17 +1,14 @@
 .tooltip {
     position: relative;
-    display: inline-block;
-
   }
   
   .tooltip .tooltiptext {
     visibility: hidden;
-    min-width: 80px;
     background-color: #38393d;
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px;
     position: absolute;
     z-index: 100;
     top: 150%;
@@ -19,7 +16,7 @@
     margin-left: -40px;
   }
   
-  .tooltip .tooltiptext::after {
+  /* .tooltip .tooltiptext::after {
     content: "";
     position: absolute;
     bottom: 100%;
@@ -28,7 +25,7 @@
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent #38393d transparent;
-  }
+  } */
   
   .tooltip:hover .tooltiptext {
     visibility: visible;
