--- a/src/css/components/tooltip.css
+++ b/src/css/components/tooltip.css
@@ -3,7 +3,7 @@
   }
   
   .tooltip .tooltiptext {
-    visibility: hidden;
+    display: none;
     background-color: #38393d;
     color: #fff;
     text-align: center;
@@ -28,5 +28,5 @@
   } */
   
   .tooltip:hover .tooltiptext {
-    visibility: visible;
+    display: block;
   }
